# Meus-C-digos-CP

C++/: default.cpp
C++/Beecrowd/: 1001-Extremamente_Básico.cpp  1002-Área_do_Círculo.cpp  1003-Soma_Simples.cpp  1004-Produto_Simples.cpp  1005-Média_1.cpp  1006-Média_2.cpp  1007-Diferença.cpp  1008-Salário.cpp  1009-Salário_com_Bônus.cpp  1010-Cálculo_Simples.cpp  1011-Esfera.cpp  1012-Área.cpp  1013-O_Maior.cpp  1014-Consumo.cpp  1015-Distância_Entre_Dois_Pontos.cpp  1016-Distância.cpp  1017-Gasto_de_Combustível.cpp  1018-Cédulas.cpp  1024-Criptografia.cpp  1154-Idades.cpp  1564-Vai_Ter_Copa.cpp  1707-Jogo_com_Números(dp).cpp  1794-Lavanderia.cpp  1983-O_Escolhido.cpp  2146-Senha.cpp
C++/Codeforces/: 158A-Next_Round.cpp  1A-Theatre_Square.cpp  2199A-Game-(Kotlin).cpp  2217B-Flip_the_Bit_Easy_Version.cpp  2218A-The_67th_Integer_Problem.cpp  2218B-The_67th_6-7_Integer_Problem.cpp  2218C-The_67th_Permutation_Problem.cpp  231A-Team.cpp  236A-Boy_or_Girl.cpp  263A-Beautiful_Matrix.cpp  282A-Bit++.cpp  4A-Watermelon.cpp  50A-Domino_piling.cpp  71A-Way_Too_Long_Words.cpp  747A-Display_Size.cpp
C++/CodinGame/: Lower&Uppercase.cpp  Morse.cpp  Operation.cpp
C++/Exemplos conteudístas/Loops/: Contador-Acumulador_Divisores.cpp  For-Continue-Break_Sequências_Especiais.cpp  (+2 more)
C++/Leetcode/: 1-Two_Sum.cpp  2-Add_Two_Numbers.cpp
C++/OBI/: Concurso.cpp  Ogro.cpp  Relógio.cpp  Zero_para_cancelar.cpp
Java/: HelloWorld.java
OpenGL/Cubo3D/: CMakeLists.txt
OpenGL/Cubo3D/Backup/: copia_rgb_backup.cpp  copia_triangulo.cpp  copia_triangulo_rgb.cpp
Python/: Jogo_Advinhação.py
(+8 files in other folders)
